Update the head and header

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width
-    
-    =device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>John Parra | WDD 130</title>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>John Eduardo Parra | WDD 130</h1>
+    </main>
+    <footer>
+    </footer>
     <h1>Welcome to WDD 130.</h1>
     <p>This page will become your homepage for the course. You will remove this text and replace it
         with your own personal details.</p>
