--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     </header>
     <main>
         <h1>John Eduardo Parra | WDD 130</h1>
+        <img src="images/profile.jpeg" alt="Hello, my name is John Parra" width="200">
+        <p>Hello my name is John Parra and I from Chimborazo, Ecuador. I enjoy traveling and
+            visiting the small towns of my country and learning about their culture. </p>
     </main>
     <footer>
     </footer>
     <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it
+    <p>This page will become your homepage for the course. You will remove this text and replace
+        it
         with your own personal details.</p>
 
     <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
