update the footer  with copyrght sign

--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
     <main>
         <h1>John Eduardo Parra | WDD 130</h1>
         <img src="images/profile.jpeg" alt="Hello, my name is John Parra" width="200">
-        <p>Hello my name is John Parra and I from Chimborazo, Ecuador. I enjoy traveling and
-            visiting the small towns of my country and learning about their culture. </p>
+        <p>Hello my name is John Parra and I am from Riobamba, Ecuador. I really like to play almost
+            any sport with my cousins and friends and I enjoy traveling and
+            visiting the small towns of my country and learning about their culture. I am currently
+            studying Web Development at BYUI. I am really excited to be here learning more about web
+            design and I hope to be able to build more complex and amazing web pages in the next
+            few years.</p>
     </main>
     <footer>
     </footer>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace
-        it
-        with your own personal details.</p>
-
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    <p>©️2026 ♾️ John Parra ♾️ Riobamba, Ecuador</p>
 </body>
 
 </html>
