make a corrections in the footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>John Eduardo Parra Parra | WDD 130</title>
+    <title>WDD 130 | John Eduardo Parra Parra</title>
 </head>
 
 <body>
@@ -25,8 +25,9 @@
             few years.</p>
     </main>
     <footer>
+        <p>©️2026 ♾️ John Parra ♾️ Riobamba, Ecuador</p>
     </footer>
-    <p>©️2026 ♾️ John Parra ♾️ Riobamba, Ecuador</p>
+
 </body>
 
 </html>
