--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>WDD 130 | John Eduardo Parra</title>
+    <title>WDD 130 | John Eduardo Parra Parra</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <h1>John Eduardo Parra | WDD 130</h1>
+        <h1>John Eduardo Parra Parra | WDD 130</h1>
         <img src="images/profile.jpeg" alt="Hello, my name is John Parra" width="200">
         <p>Hello my name is John Parra and I am from Riobamba, Ecuador. I really like to play almost
             any sport with my cousins and friends and I enjoy traveling and
