update the photo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <h1>John Eduardo Parra Parra | WDD 130</h1>
-        <img src="images/profile.jpeg" alt="Hello, my name is John Parra" width="200">
+        <img src="images/profile.png" alt="Hello, my name is John Parra" width="200">
         <p>Hello my name is John Parra and I am from Riobamba, Ecuador. I really like to play almost
             any sport with my cousins and friends and I enjoy traveling and
             visiting the small towns of my country and learning about their culture. I am currently
