--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="John Parra">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="The basic HTML structure" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://www.churchofjesuschrist.org/?lang=eng">The Church Page</a></li>
+            <li><a href="https://www.byui.edu/">BYU-Idaho Page</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, quidem?</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, dolor.</p>
+        </section>
+    </main>
+    <aside>
+        <img
+          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/anchorage-alaska/320x180/anchorage-temple-lds-253274-wallpaper.jpg"
+          alt="Anchorage Alaska Temple in the winter" width="200">
+    </aside>
+    <footer>
+        <p>♾️John Parra♾️</p>
+    </footer>
 </body>
+
 </html>
