home page enhancement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Parra | WDD 130</title>
+    <meta name="description"
+      content="Web fundamentals: Basics of Web Development. Hi my name is John Parra this is my home page where I going to apply some concepts of enhances using HTML and CSS.">
+    <meta name="author" content="John Parra">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -25,6 +28,13 @@
             design and I hope to be able to build more complex and amazing web pages in the next
             few years.</p>
     </main>
+    <aside>
+        <h2>Ecuador</h2>
+        <img src="images/ecuador-view.jpg"
+          alt="Panoramic view of The capital of Ecuador Quito city">
+        <p>Ecuador is a diverse South American nation known for its stunning Andean peaks, colonial
+            architecture, vibrant culture, and the unique wildlife of the Galápagos Islands.</p>
+    </aside>
     <footer>
         <p>©️2026 ♾️ John Parra ♾️ Riobamba, Ecuador</p>
     </footer>
