--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Parra | WDD 130</title>
     <meta name="description"
-      content="Web fundamentals: Basics of Web Development. Hi my name is John Parra this is my home page where I am going to apply some concepts of enhances using HTML and CSS.">
+      content="Web fundamentals:Basics of Web Development. Hi my name is John Parra and in this page I am going to apply some concepts of enhances using HTML and CSS.">
     <meta name="author" content="John Parra">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
