--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="John Parra">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+<!-- This is a comment for my page  -->
 
 <body>
     <header>
