code along week 3

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       content="Web fundamentals:Basics of Web Development. Hi my name is John Parra and in this page I am going to apply some concepts of enhances using HTML and CSS.">
     <meta name="author" content="John Parra">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
+
+
 </head>
 <!-- This is a comment for my page  -->
 
@@ -17,6 +24,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="www.linkedin.com/in/jp-interpreter">Linkedin</a>
+            <a href="https://www.facebook.com/jh0n.parra2004/">Facebook profile</a>
         </nav>
     </header>
     <main>
@@ -28,8 +37,17 @@
             studying Web Development at BYUI. I am really excited to be here learning more about web
             design and I hope to be able to build more complex and amazing web pages in the next
             few years.</p>
+        <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/guayaquil-ecuador-temple?lang=eng"
+                  target="_blank">Guayaquil Ecuador Temple</a>
+            </li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/brasilia-brazil-temple?lang=eng"
+                  target="_blank">Brasília Brazil Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/natal-brazil-temple?lang=eng"
+                  target="_blank">Natal Brazil Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Ecuador</h2>
         <img src="images/ecuador-view.jpg"
           alt="Panoramic view of The capital of Ecuador Quito city">
