--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description"
       content="Here we are going to tell you about our history, services that we offer and how you can contact us  ">
     <meta name="author" content="John Eduardo Parra">
-    <title>About us Rafting Company</title>
+    <title>About us Splash White Water Rafting</title>
     <link rel="stylesheet" href="styles/rafting.css">
 
 </head>
